--- a/NewsFeed/Core/Navigation/TabBar/ImageTabBarItem.xib
+++ b/NewsFeed/Core/Navigation/TabBar/ImageTabBarItem.xib
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ImageTabBarItem" customModule="NewsFeed" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="59" height="48"/>
+            <rect key="frame" x="0.0" y="0.0" width="59" height="66"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fCg-VZ-Mqa" userLabel="Icon Image View">
@@ -21,19 +21,28 @@
                         <constraint firstAttribute="width" constant="40" id="PQ6-Gc-9BQ"/>
                     </constraints>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcW-Xm-ct8">
+                    <rect key="frame" x="8.6666666666666643" y="48" width="42" height="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="zcW-Xm-ct8" secondAttribute="bottom" constant="4" id="2V6-4z-ecO"/>
                 <constraint firstItem="fCg-VZ-Mqa" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="3PY-Cn-AkB"/>
-                <constraint firstAttribute="bottom" secondItem="fCg-VZ-Mqa" secondAttribute="bottom" constant="4" id="FGF-WG-BrM"/>
+                <constraint firstItem="zcW-Xm-ct8" firstAttribute="centerX" secondItem="fCg-VZ-Mqa" secondAttribute="centerX" id="XUp-PE-P0P"/>
                 <constraint firstItem="fCg-VZ-Mqa" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" id="iS6-Sl-zfM"/>
                 <constraint firstItem="fCg-VZ-Mqa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="4" id="xnG-aG-2O8"/>
+                <constraint firstItem="zcW-Xm-ct8" firstAttribute="top" secondItem="fCg-VZ-Mqa" secondAttribute="bottom" constant="4" id="zkl-d3-MG8"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="bottomTitleLabel" destination="zcW-Xm-ct8" id="nZo-vz-eH0"/>
                 <outlet property="iconImageView" destination="fCg-VZ-Mqa" id="sAI-S1-yKs"/>
             </connections>
-            <point key="canvasLocation" x="-118.32061068702289" y="-130.28169014084509"/>
+            <point key="canvasLocation" x="-118.32061068702289" y="-123.94366197183099"/>
         </view>
     </objects>
     <resources>
