--- a/NewsFeed/Core/Navigation/TabBar/ImageTabBarItem.xib
+++ b/NewsFeed/Core/Navigation/TabBar/ImageTabBarItem.xib
@@ -15,15 +15,15 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fCg-VZ-Mqa" userLabel="Icon Image View">
-                    <rect key="frame" x="9.6666666666666643" y="4" width="40" height="40"/>
+                    <rect key="frame" x="13.666666666666664" y="4" width="32" height="32"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="F2U-ef-kyo"/>
-                        <constraint firstAttribute="width" constant="40" id="PQ6-Gc-9BQ"/>
+                        <constraint firstAttribute="height" constant="32" id="F2U-ef-kyo"/>
+                        <constraint firstAttribute="width" constant="32" id="PQ6-Gc-9BQ"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcW-Xm-ct8">
-                    <rect key="frame" x="8.6666666666666643" y="48" width="42" height="14"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="14" y="40" width="31" height="22"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
