--- a/NewsFeed/Features/NewsDetail/View/NewsDetailViewController.xib
+++ b/NewsFeed/Features/NewsDetail/View/NewsDetailViewController.xib
@@ -5,12 +5,14 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewsDetailViewController" customModule="NewsFeed" customModuleProvider="target">
             <connections>
+                <outlet property="newsBodyLabel" destination="PYA-cf-L81" id="71I-t2-Lkp"/>
+                <outlet property="newsImageView" destination="eTX-Di-qii" id="Qa4-pX-Pck"/>
+                <outlet property="newsTitleLabel" destination="A9B-Ls-2eY" id="068-1p-Ads"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,14 +20,56 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j3Q-E1-2RP">
+                    <rect key="frame" x="0.0" y="118" width="393" height="666"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gQE-8u-j3W">
+                            <rect key="frame" x="16" y="12" width="361" height="231.33333333333334"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eTX-Di-qii">
+                                    <rect key="frame" x="72.333333333333329" y="0.0" width="216.33333333333337" height="162.33333333333334"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="eTX-Di-qii" secondAttribute="height" multiplier="4:3" id="1bx-dz-lZs"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A9B-Ls-2eY">
+                                    <rect key="frame" x="11.666666666666657" y="170.33333333333331" width="337.66666666666674" height="61"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PYA-cf-L81">
+                                    <rect key="frame" x="-731" y="231.33333333333331" width="1823.0000000000002" height="0.0"/>
+                                    <string key="text">Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label</string>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="eTX-Di-qii" firstAttribute="width" secondItem="gQE-8u-j3W" secondAttribute="width" multiplier="0.6" id="Dep-J2-Dvd"/>
+                            </constraints>
+                        </stackView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="gQE-8u-j3W" secondAttribute="bottom" id="1pl-5F-bL3"/>
+                        <constraint firstItem="gQE-8u-j3W" firstAttribute="centerX" secondItem="j3Q-E1-2RP" secondAttribute="centerX" id="21P-U3-3fJ"/>
+                        <constraint firstItem="gQE-8u-j3W" firstAttribute="top" secondItem="j3Q-E1-2RP" secondAttribute="top" constant="12" id="3x0-zF-c3u"/>
+                        <constraint firstItem="gQE-8u-j3W" firstAttribute="leading" secondItem="j3Q-E1-2RP" secondAttribute="leading" constant="16" id="NwJ-6q-goO"/>
+                        <constraint firstAttribute="trailing" secondItem="gQE-8u-j3W" secondAttribute="trailing" constant="16" id="hhC-xv-hqs"/>
+                    </constraints>
+                </scrollView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemCyanColor"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="j3Q-E1-2RP" secondAttribute="bottom" id="5AF-YO-l2i"/>
+                <constraint firstItem="j3Q-E1-2RP" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="K9R-Mm-BH5"/>
+                <constraint firstItem="j3Q-E1-2RP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="V2L-ei-UXF"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="j3Q-E1-2RP" secondAttribute="trailing" id="tH4-Y2-0Dj"/>
+                <constraint firstItem="j3Q-E1-2RP" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="wyu-dd-ijo"/>
+            </constraints>
             <point key="canvasLocation" x="94" y="101"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemCyanColor">
-            <color red="0.1960784314" green="0.67843137249999996" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
