--- a/NewsFeed/Features/NewsDetail/View/NewsDetailViewController.xib
+++ b/NewsFeed/Features/NewsDetail/View/NewsDetailViewController.xib
@@ -62,7 +62,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a9l-lL-ove">
                                     <rect key="frame" x="0.0" y="56.000000000000014" width="361" height="162.33333333333337"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eTX-Di-qii">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eTX-Di-qii">
                                             <rect key="frame" x="72.333333333333329" y="0.0" width="216.33333333333337" height="162.33333333333334"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="eTX-Di-qii" secondAttribute="height" multiplier="4:3" id="1bx-dz-lZs"/>
