Add theme manager

--- a/NewsFeed/Features/Settings/View/SettingsViewController.xib
+++ b/NewsFeed/Features/Settings/View/SettingsViewController.xib
@@ -109,6 +109,9 @@
                                                 <segment title="First"/>
                                                 <segment title="Second"/>
                                             </segments>
+                                            <connections>
+                                                <action selector="onChangeTheme:" destination="-1" eventType="valueChanged" id="M0i-uh-bhW"/>
+                                            </connections>
                                         </segmentedControl>
                                     </subviews>
                                     <constraints>
