--- a/NewsFeed/Features/MainTabBar/View/MainTabBarController.xib
+++ b/NewsFeed/Features/MainTabBar/View/MainTabBarController.xib
@@ -26,7 +26,7 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d4p-ge-prn">
                     <rect key="frame" x="0.0" y="733" width="393" height="119"/>
-                    <color key="backgroundColor" name="Gray6"/>
+                    <color key="backgroundColor" name="BackgroundPrimary"/>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hGW-wl-VAX">
                     <rect key="frame" x="0.0" y="733" width="393" height="51"/>
@@ -81,11 +81,11 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="BackgroundPrimary">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Gray5">
             <color red="0.87843137979507446" green="0.87843137979507446" blue="0.87843137979507446" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Gray6">
-            <color red="0.9490196704864502" green="0.9490196704864502" blue="0.9490196704864502" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
