--- a/NewsFeed/Features/Feed/View/FeedViewController.xib
+++ b/NewsFeed/Features/Feed/View/FeedViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24504"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,6 +21,33 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aD4-Ke-fHM">
+                    <rect key="frame" x="115.33333333333333" y="405" width="162.33333333333337" height="92.333333333333314"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newspaper" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="SqT-2p-ypp">
+                            <rect key="frame" x="51.333333333333329" y="0.33333333333333215" width="60" height="59.666666666666671"/>
+                            <color key="tintColor" name="Accent"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="SqT-2p-ypp" secondAttribute="height" id="5lx-3l-y77"/>
+                                <constraint firstAttribute="width" constant="60" id="9zz-JH-96V"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There is no news yet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="91v-Ey-XDB">
+                            <rect key="frame" x="0.0" y="72" width="162.33333333333334" height="20.333333333333329"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                            <color key="textColor" name="TextPrimary"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="91v-Ey-XDB" firstAttribute="top" secondItem="SqT-2p-ypp" secondAttribute="bottom" constant="12" id="5E2-A0-NEr"/>
+                        <constraint firstItem="SqT-2p-ypp" firstAttribute="top" secondItem="aD4-Ke-fHM" secondAttribute="top" id="Lde-Tq-Z3S"/>
+                        <constraint firstAttribute="bottom" secondItem="91v-Ey-XDB" secondAttribute="bottom" id="N1y-sq-8ax"/>
+                        <constraint firstAttribute="trailing" secondItem="91v-Ey-XDB" secondAttribute="trailing" id="VWR-ZM-9Hd"/>
+                        <constraint firstItem="SqT-2p-ypp" firstAttribute="centerX" secondItem="aD4-Ke-fHM" secondAttribute="centerX" id="bDW-gz-FYN"/>
+                        <constraint firstItem="91v-Ey-XDB" firstAttribute="leading" secondItem="aD4-Ke-fHM" secondAttribute="leading" id="vQR-a0-uh0"/>
+                    </constraints>
+                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fT0-fT-6Gb">
                     <rect key="frame" x="0.0" y="118" width="393" height="666"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -30,13 +58,24 @@
             <constraints>
                 <constraint firstItem="fT0-fT-6Gb" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="1cL-Kp-HvU"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="fT0-fT-6Gb" secondAttribute="trailing" id="ApP-iI-QUq"/>
+                <constraint firstItem="aD4-Ke-fHM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Hwz-Bl-glm"/>
+                <constraint firstItem="aD4-Ke-fHM" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="RFv-dp-eUv"/>
+                <constraint firstItem="aD4-Ke-fHM" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="S9S-MW-tMZ"/>
                 <constraint firstItem="fT0-fT-6Gb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="u9T-ir-Pg2"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aD4-Ke-fHM" secondAttribute="trailing" constant="20" id="wsu-c2-yc6"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="fT0-fT-6Gb" secondAttribute="bottom" id="x7S-wh-FSd"/>
             </constraints>
             <point key="canvasLocation" x="138" y="154"/>
         </view>
     </objects>
     <resources>
+        <image name="newspaper" catalog="system" width="128" height="111"/>
+        <namedColor name="Accent">
+            <color red="0.60784316062927246" green="0.80392158031463623" blue="0.60784316062927246" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TextPrimary">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
