Change localization to Russian lang

--- a/NewsFeed/Features/Feed/Cells/News/FeedTableViewCell.xib
+++ b/NewsFeed/Features/Feed/Cells/News/FeedTableViewCell.xib
@@ -60,7 +60,7 @@
                                             <constraint firstAttribute="width" constant="20" id="aax-R8-9Va"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Read" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zla-Am-tCE">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Прочитано" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zla-Am-tCE">
                                         <rect key="frame" x="24" y="2.3333333333333277" width="188" height="15.666666666666664"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" name="Accent"/>
