--- a/NewsFeed/Features/Settings/Subviews/AddOrEditResource/View/AddOrEditResourceViewController.xib
+++ b/NewsFeed/Features/Settings/Subviews/AddOrEditResource/View/AddOrEditResourceViewController.xib
@@ -25,8 +25,8 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8hV-Hh-0xo">
-                    <rect key="frame" x="15.999999999999996" y="134" width="51.666666666666657" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Имя:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8hV-Hh-0xo">
+                    <rect key="frame" x="16.000000000000004" y="134" width="40.333333333333343" height="21"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                     <color key="textColor" name="TextPrimary"/>
                     <nil key="highlightedColor"/>
@@ -39,8 +39,8 @@
                         <action selector="onNameTextFieldChange:" destination="-1" eventType="editingDidEnd" id="69a-iJ-7hv"/>
                     </connections>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Url Address:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oR6-48-tmS">
-                    <rect key="frame" x="15.999999999999993" y="217" width="98.333333333333314" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="URL-адрес ресурса:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oR6-48-tmS">
+                    <rect key="frame" x="16" y="217" width="167.66666666666666" height="21"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                     <color key="textColor" name="TextPrimary"/>
                     <nil key="highlightedColor"/>
