--- a/NewsFeed/Features/NewsDetail/View/NewsDetailViewController.xib
+++ b/NewsFeed/Features/NewsDetail/View/NewsDetailViewController.xib
@@ -33,7 +33,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="48"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="yj5-zg-a00">
-                                            <rect key="frame" x="146" y="9" width="69" height="30"/>
+                                            <rect key="frame" x="124.33333333333334" y="9" width="112.66666666666666" height="30"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.seal.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="v3a-SZ-FtU">
                                                     <rect key="frame" x="0.0" y="-0.66666666666666785" width="30" height="31.333333333333336"/>
@@ -43,8 +43,8 @@
                                                         <constraint firstAttribute="width" secondItem="v3a-SZ-FtU" secondAttribute="height" id="jT6-sW-R1u"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Read" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qin-2c-sQL">
-                                                    <rect key="frame" x="34" y="0.0" width="35" height="30"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Прочитано" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qin-2c-sQL">
+                                                    <rect key="frame" x="34.000000000000007" y="0.0" width="78.666666666666686" height="30"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" name="Accent"/>
                                                     <nil key="highlightedColor"/>
